--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 { "name" : "Regularity",
   "main" : "./lib/regularity.js",
-  "version": '0.1.0',
+  "version": '0.1.1',
   "author": "Fernando Martinez de la Cueva <me@oinak.com> (http://oinak.com/)",
-  "license" : "BSD",
+  "license" : "MIT",
   "files": ["./lib/regularity.js"],
   "main": "regularity",
   "thanks": "Andrew Berls for the original idea and the Regularity ruby gem: (https://rubygems.org/gems/regularity)"
