Add some keywords to package.json.

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   ],
   "thanks": "Andrew Berls for the original idea and the Regularity ruby gem: (https://rubygems.org/gems/regularity)",
   "homepage": "https://github.com/oinak/regularity",
+  "keywords": ["regular", "expression", "regex", "regexp", "dsl"],
   "devDependencies": {
     "jasmine": "^2.1.1"
   }
