--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,6 @@
 node_modules
+
+# For posting to coveralls.io from your local machine.
+# This file contains the 'repo_token', which MUST NOT
+# be made public! Hence, tell Git to ignore it.
+.coveralls.yml
