Ignore the directory where istanbul drops its coverage report when run locally.

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@ node_modules
 # This file contains the 'repo_token', which MUST NOT
 # be made public! Hence, tell Git to ignore it.
 .coveralls.yml
+
+
+# This is where istanbul drops its coverage report (when run locally)
+coverage
