--- a/package.json
+++ b/package.json
@@ -1,20 +1,25 @@
 {
     "name": "regularity",
-    "main": "lib/regularity.js",
     "version": "0.3.0",
+
+    "main": "lib/regularity.js",
 
     "author": "Fernando Martinez de la Cueva <me@oinak.com> (http://oinak.com/)",
     "contributors": [
         "Elías Alonso <elias@redradix.com> (http://redradix.com/)",
         "Laura Paredes Viera <laura@wearepeople.io> (http://wearepeople.io)",
-        "Alejandra Goicoechea <alex.goicoechea@wearepeople.io> (http://wearepeople.io)"
+        "Alejandra Goicoechea <alex.goicoechea@wearepeople.io> (http://wearepeople.io)",
+        "Ángel Sanz <angelsanzgit@gmail.com> (https://github.com/angelsanz)"
     ],
-    "thanks": "Andrew Berls for the original idea and the Regularity ruby gem: (https://rubygems.org/gems/regularity)",
+    "thanks": "Andrew Berls for the original idea and the Regularity Ruby gem (https://rubygems.org/gems/regularity)",
 
     "homepage": "https://github.com/oinak/regularity",
     "repository": {
         "type": "git",
-        "url": "https://github.com/oinak/regularity"
+        "url": "https://github.com/oinak/regularity.git"
+    },
+    "bugs": {
+        "url": "https://github.com/oinak/regularity/issues"
     },
 
     "license": "MIT",
